# Rust_URL_Shortener

./: Cargo.toml  README.md
src/: main.rs  mapping.txt  url_map.json  urls.json
