[package]
name = "rust_url_shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

